Create the tests and add reservation in bike part.
The coverage of the tests come to 35%